@@ -1,7 +1,7 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1,SHA512
 
-34c9fcada544411992ad0880144c1af59fd061bb  14802 ChangeLog
+619d997a8395c16dcd25ee1f12081900601f6dc6  14850 ChangeLog
 8b869a67b40453fb41c8527e8aaf80f66c8a473f   2731 Makefile
 07b4f1de1ba206bdcadd2d234c89006f1b07388a   9882 configure
 4cc77b90af91e615a64ae04893fdffa7939db84c  18092 gpl-2.0.txt
@@ -21,23 +21,23 @@ eae1b0fb4deb0adbed4237bfbf7cea7022efa909   2373 misc/64.png
 83055c532a24e778aabd9b5aa86cf9ee3d1f17a9    353 misc/evilvte.xml
 c5ccf87f60b8039f34e8914edd866cce5564a3e4   1707 misc/manpage.1
 a83357473eb7c431a9f8e2813e02553d5ffa54b7    338 misc/showvte.1
-3dd526163d4ac6cd2c6d3c6b5e244400a77c5f7d  10160 src/config.h
-8dd394a21011c50c590ff6af6dbf3d66749cc93a 155048 src/evilvte.c
+84accad152634bec1517b6134c494e0e02382f26  10262 src/config.h
+19751a7e3cfb2a68152c5fcb99a63983f0fdb7b5 155648 src/evilvte.c
 b6d50176aaf9828bcdf63f8d52f8c8080fefd9f2  14792 src/process.sh
 -----BEGIN PGP SIGNATURE-----
 
-iEYEARECAAYFAk8Xz8UACgkQdEpXpumNYVlnKACfWoA+Q7XOq7KYlwkDoQGj41Fd
-VwoAnAqyRtdUl7B3I+MbogeahvgfdNsMiQIcBAEBCgAGBQJPF8/FAAoJELc3H0m+
-i6gZ4BgP/RT1m64Gr7PkcU+ieVDgEGxZ9/NQo7aI4KRY6RzBLg4aNIuue4EX+Xdz
-HqTRIeG6ovSwwyG1YK3n5pbcYDXBVVVkZR5vIe8tnRC3HmLhNhW9islNz7KFpx2n
-IVJQUe3YMo5CHYw5P2t+yxU2/T8H1e3a74dCK9Cfzr4E9VsYYLQp7Mbt8Aqgvmp/
-YiVqJge4N7+52EwiMobOSV2irf/ljc7/8/FhsE7IeOJI+NAF15qym/VAW0cpSmdM
-ri44KAEjzHDsiDoqwIdtYNcaotADmzrKC2bo5zunbx4Er1ugVVVI1GriVoolmr0N
-ir9LZlV5UbDbJqomkZNZc6guSXgfVQneTt92QmRVd3HI3GccAANfMtw9VVH2e2mM
-qisXpQ7i9la3eR1rkZsQyr8qOR7BW+/CcQi7ZPVhY5LTfVHnU5Mtmz0IeWOZ3rwK
-t+h4CUucj5IgZethV+W/it51ES5HZXkQ7BhpNwOKSAAjrU5gh55UGaCK1xxLIRLx
-rYkysmQnjSJjU993d/DudBJ1fA05klZ5B4ndcBJQcht21XSE5324W4KYPI1p7OHS
-qUrEIO1PQReBAv+0zpOx+TSLk/wMaJMTeVyJc7faYABd/hfrX/mhz4v2l7qUhYLE
-GYxOpzf497Zgs0nbtLP62Drezw/hLopno8XFXOV0eWN/DJHBBBuE
-=YkOu
+iEYEARECAAYFAk8X0GcACgkQdEpXpumNYVl+tgCeID1xIkdJ1pm+qCsm/NZNg/hG
+IyIAn1XbmOdfQ58/r4jo8DnQVKZYAmYdiQIcBAEBCgAGBQJPF9BnAAoJELc3H0m+
+i6gZvakQAKebPbB09G/YzOGLQVN2UdlmsxIuO+CmCYeEnCWseKRFqBTgyx7Q3xFe
+8500vd1ScrEE2RNidRSMXIioUdulwAXLUsTQ4viUagV4UuiAzWNIxz490Mq9nbvo
+063mizWcE9jMwpHNxFb6QuR+5x2yeFWgs+bUTWGyikDcRnqxiTUbioPpifDZ6xww
+bJyPN869UmBe1+blcBXQSjT72Tv3HKdliPwFi2IpHPSTU3mdzqA3Zf9OuySVLNtV
+Gf+lfFWOZ7fsgoOwEkFuuBKlPgnxUYhusp66KLsg5EMnbKJYRT/v+ZsBkbfjdC+c
+zd9Ed0bZT0+mrjfouGPxZg9cEPZCFGrVDC/M+F8QRwsFjlq040ltrLHXrtZP+4S3
+/9nfzvWc2XQwHoeaMEwSwi4kzuRDEdD0Npnhh5TwjX0iwxhoVLYK1HLPKNgDa5Wx
+VOeJy/JQR5d8eXt10Qd3aMhzb3A2OaVc4tIikGNyQLlSFjqoSL6PCCSnZcOP4WdX
+EwZQWGCSjcl/AKU2x0dXgFZPgxr2qBCDvpOOOj3BYN7VN7cmZ8F9PJ2grxzSmCXA
+DHMXvM6QbWxSBSFyCAhBgFw2hD5PAWn/hbeHNJpUY+dO5TFvG2Hu/oXSxQKg8IbN
+Nwdk+V04jR4BmP+EACRKPRlbvZNF7nTKEk+QOdEQ91z0GRc2AVLb
+=mYqo
 -----END PGP SIGNATURE-----
