@@ -141,6 +141,8 @@
 // #define HOTKEY_SATURATION_DIALOG     CTRL GDK_X
 // #define HOTKEY_SATURATION_MORE       CTRL GDK_KP_Multiply
 // #define HOTKEY_SATURATION_LESS       CTRL GDK_KP_Divide
+// #define HOTKEY_SCROLL_ONE_PAGE_UP    CTRL GDK_k
+// #define HOTKEY_SCROLL_ONE_PAGE_DOWN  CTRL GDK_j
 // #define HOTKEY_SEARCH_STRING         CTRL GDK_Q
 // #define HOTKEY_SEARCH_PREVIOUS       CTRL GDK_G
 // #define HOTKEY_SEARCH_NEXT           CTRL GDK_g
